# jeff

./: .gitignore  README.md  Tuprules.tup  build  export-library  jeff.py  pyproject.toml
SQLiteCpp/src/: Tupfile
jeff/: gui.py  library.py
src/: Tupfile  jeff.cc  player.cc  player.hh  player_application.cc  player_application.hh  player_window.cc  player_window.hh
